# summer-of-spin

Challenge-4/: Cargo.toml  spin.toml
Challenge-4/src/: lib.rs
challenge-1/: Cargo.toml  shell.nix  spin.toml
challenge-1/._/: Cargo.toml  spin.toml
challenge-1/._/src/: lib.rs
challenge-1/src/: lib.rs
challenge-2/: Cargo.toml  runtime-config.toml  spin.toml  test.hurl
challenge-2/get-itinerary/: .gitignore  knitwit.json  package-lock.json  package.json
challenge-2/get-itinerary/src/: index.ts
challenge-2/src/: lib.rs
challenge-3/: Cargo.toml  spin.toml  test.hurl
challenge-3/src/: lib.rs
